--- a/ygloria-lab3/quarterly-goals/index.html
+++ b/ygloria-lab3/quarterly-goals/index.html
@@ -10,10 +10,7 @@
     <div class="goals-container">
         <h2>Quarterly Goals</h2>
         <ul id="goal-list">
-            <li class="goal">
-                <input type="checkbox" /> Do well in algorithms class
-                <span class="tag">#class-algorithms</span>
-            </li>
+            <li><input type="checkbox"> Do well in algorithms class <span class="tag">#class-algorithms</span></li>
         </ul>
         <button id="add-goal-btn">Add a quarter goal</button>
     </div>
